@@ -1,4 +1,7 @@
 2006-07-18  Alex Roitman  <shura@gramps-project.org>
+	* src/ArgHandler.py (ArgHandler.cl_export): Properly expand filename.
+	* src/GrampsDb/_WriteGrdb.py (exportData): Use placeholder if
+	callback is None.
 	* src/GrampsDb/_GrampsBSDDB.py
 	(_delete_primary_from_reference_map): defer deleting until the
 	cursor is closed.
